@@ -7,6 +7,6 @@ copyright_year   = 2011
 [@Author::RWSTAUNER]
 
 [Prereqs]
-Parse::ANSIColor::Tiny = 0.400
+Parse::ANSIColor::Tiny = 0.500
 [%PodWeaver]
 -StopWords.include = inline hashrefs
